# nanoq

./: .dockerignore  .zenodo.json  Cargo.toml  Dockerfile  LICENSE  README.md  Singularity  build.sh  meta.yaml
.github/workflows/: release.yaml  rust-ci.yaml
data/: test.fa  test.fq
paper/: Benchmarks  benchmark_filter.sh  benchmark_stats.sh  benchmark_summary.tsv  joss.md  paper.bib  paper.md  plot_benchmarks.py  run_benchmarks.sh
paper/benchmarks/: filtlong_filt_fq  filtlong_filt_gz  nanofilt_filt_fq  nanofilt_filt_gz  nanoq_filt_fq  nanoq_filt_gz  nanoq_stat_fq  nanoq_stat_gz  nanoqf_filt_fq  nanoqf_filt_gz  nanoqf_stat_fq  nanoqf_stat_gz  nanostat8_stat_fq  nanostat8_stat_gz  nanostat_stat_fq  nanostat_stat_gz  rbt_stat_fq  rbt_stat_gz  seqkit_stat_fq  seqkit_stat_gz  seqtk_stat_fq  seqtk_stat_gz
src/: cli.rs  main.rs  needlecast.rs  utils.rs
tests/: app.rs  main.rs
tests/cases/: test_bad1.fa  test_bad1.fq  test_bad2.fq  test_len.fq  test_ok.fa  test_ok.fq
