[package]
name = "nanoq"
version = "0.2.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Minimal but speedy quality control for nanopore reads"
documentation = "https://github.com/esteinig/nanoq"
homepage = "https://github.com/esteinig/nanoq"
repository = "https://github.com/esteinig/nanoq"
readme = "README.md"
keywords = ["nanopore", "quality", "ont", "filter", "read"]
categories = ["science"]
license = "MIT"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
clap = "2.33.0"
libm = "0.2.1"
bio = "*"
needletail = "0.4"
permutation = "0.2.5"