[package]
name = "nanoq"
version = "0.2.1"
authors = ["esteinig <eike.steinig@unimelb.edu.au>", "ljmcoin <lachlan.coin@unimelb.edu.au>"]
description = "Minimal but speedy quality control and summaries of nanopore reads"
documentation = "https://github.com/esteinig/nanoq"
homepage = "https://github.com/esteinig/nanoq"
repository = "https://github.com/esteinig/nanoq"
readme = "README.md"
keywords = ["nanopore", "ont", "summary", "filter", "read"]
categories = ["science"]
license = "MIT"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
clap = "2.33.0"
bio = "0.32.0"
needletail = "0.4"
num-format = "0.4.0"