[package]
name = "nanoq"
version = "0.9.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>", "ljmcoin <lachlan.coin@unimelb.edu.au>"]
description = "Minimal but speedy quality control and summaries of nanopore reads"
documentation = "https://github.com/esteinig/nanoq"
homepage = "https://github.com/esteinig/nanoq"
repository = "https://github.com/esteinig/nanoq"
readme = "README.md"
keywords = ["nanopore", "ont", "summary", "filter", "read"]
categories = ["science"]
license = "MIT"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
structopt = "0.3"
clap = "2.33.0"
anyhow = "1.0"
indoc = "1.0"
needletail = "0.4.1"
thiserror = "1.0"
niffler = "2.3"
float_eq = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0.1"
predicates = "1"
tempfile = "3.1.0"